# LMS-system

./: .coverage  LMS-system  README.md  docker-compose.yaml  groups.json  payments.json  pyproject.toml  sample.env
config/: celery.py  settings.py  urls.py
lms/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
lms/migrations/: 0001_initial.py  0002_course_owner_lesson_owner_alter_lesson_course.py  0003_alter_lesson_course.py  0004_subscription.py  0005_alter_subscription_created_at.py  0006_alter_subscription_options.py
users/: admin.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_alter_payment_user.py  0004_payment_stripe_payment_url_payment_stripe_session_id_and_more.py  0005_alter_payment_payment_date.py
